Fix missing parts and remove unnecessary parts

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section data-markdown="pages/03-why-use-asciidoc.html"></section>
         <section data-markdown="pages/04-getting-started-asciidoc.html"></section>
         <section data-markdown="pages/05-what-is-antora.html"></section>
-        <section data-markdown="pages/06-why-use-antora.html"></section>
+        <!-- <section data-markdown="pages/06-why-use-antora.html"></section> -->
         <section data-markdown="pages/07-getting-started-antora.html"></section>
         <section data-markdown="pages/08-antora-components.html"></section>
         <section data-markdown="pages/09-integrate-antora.html"></section>
