--- a/pages/01-overview.html
+++ b/pages/01-overview.html
@@ -8,34 +8,29 @@
         <li>Why use AsciiDoc?</li>
         <li>Getting started with AsciiDoc</li>
         <li>What is Antora?</li>
-        <li>Why use Antora?</li>
+        <li>Getting started with Antora</li>
       </ul>
     </div>
     <div class="content" style="float: left; width: 50%">
       <ul>
-        <li>Getting started with Antora</li>
         <li>Antora Components</li>
         <li>Integrating Antora with Other Tools</li>
         <li>Advanced Antora Features</li>
-        <li>Q&A and Demo</li>
+        <li>Demo</li>
       </ul>
     </div>
   </div>
 </div>
 <aside class="notes">
   <div style="font-size: large !important">
-    <p>At first, we will talk shortly about what Antora and AsciiDoc are.</p>
-    <p>Then with a few short command snippets, we will see what we need to install and run the Antora.</p>
     <p>
-      Later on, we will talk about some fundamental components of the Antora such as Pages, Xrefs, Links and Partials.
-      In addition to that, we will try to understand the directory structure.
+      Today's tech-talk covers two key topics. AsciiDoc and Antora. It explains what AsciiDoc is, its benefits, and
+      getting started with it. Similarly, it introduces Antora, its advantages, and getting started with it.
     </p>
     <p>
-      As the last steps of the presentation, we will see the two important files of the tool. Playbook file and Antora
-      yml file. We will shortly talk what these files are and what for they serve.
+      The presentation also touches on advanced features, integrating Antora with other tools, and concludes with a demo
+      session.
     </p>
-    <p>After all, we will see the Antora in action.</p>
-    <hr />
-    <p>Let's start with "What is Antora?"</p>
+    <p>Let's start with Asciidoc</p>
   </div>
 </aside>
