--- a/pages/02-what-is-asciidoc.html
+++ b/pages/02-what-is-asciidoc.html
@@ -4,7 +4,7 @@
     <div><hr /></div>
     <div class="content">
       <ul>
-        <li class="fragment">A lightweight markup language</li>
+        <li>A lightweight markup language</li>
         <li class="fragment">Developed as an alternative to other markup languages</li>
         <li class="fragment">Uses a plain text format</li>
         <li class="fragment">The syntax is similar to other markup languages</li>
@@ -45,10 +45,9 @@
       </p>
       <p>
         AsciiDoc allows users to create custom macros and attributes, which can be used to extend the functionality of
-        the language. This makes it possible to create complex documents with advanced features, such as custom table
-        formatting and cross-referencing.
+        the language.
       </p>
-      <p>Let's have a look some of the syntax used in AsciiDoc.</p>
+      <p>Let's explore some of the syntax used in AsciiDoc.</p>
     </div>
   </aside>
 </section>
