--- a/pages/03-why-use-asciidoc.html
+++ b/pages/03-why-use-asciidoc.html
@@ -4,7 +4,7 @@
   <div class="content">
     <p>Here are some of the key benefits of using AsciiDoc for documentation:</p>
     <ul>
-      <li class="fragment">Flexibility:<br />easy to read and write, and offers a flexible syntax</li>
+      <li>Flexibility:<br />easy to read and write, and offers a flexible syntax</li>
       <li class="fragment">Extensibility:<br />developers and technical writers can create custom macros, etc.</li>
       <li class="fragment">Versioning:<br />supports versioning</li>
       <li class="fragment">Portability:<br />can be easily converted to other formats like HTML, PDF, and ePub</li>
@@ -14,32 +14,28 @@
 <aside class="notes">
   <div style="font-size: large !important">
     <p>
-      Flexibility: AsciiDoc is designed to be easy to read and write, and offers a flexible syntax that can be used to
-      create a wide range of documentation styles.
+      AsciiDoc is designed to be easy to read and write, and offers a flexible syntax that can be used to create a wide
+      range of documentation styles.
     </p>
     <p>
       <b><em>click for next</em></b>
     </p>
     <p>
-      Extensibility: AsciiDoc's syntax is extensible, which means that developers and technical writers can create
-      custom macros, attributes, and other features to meet their specific documentation needs.
+      AsciiDoc's syntax is extensible, which means that developers and technical writers can create custom macros,
+      attributes, and other features to meet their specific documentation needs.
     </p>
     <p>
       <b><em>click for next</em></b>
     </p>
-    <p>
-      Versioning: AsciiDoc supports versioning, which means that documentation can be updated and managed over time.
-    </p>
+    <p>AsciiDoc supports versioning, which means that documentation can be updated and managed over time.</p>
     <p>
       <b><em>click for next</em></b>
     </p>
     <p>
-      Portability: AsciiDoc can be easily converted to other formats like HTML, PDF, and ePub. This makes it easy to
-      distribute documentation to users and customers in the format they prefer.
-    </p>
-    <p>
-      <b><em>click for next</em></b>
+      AsciiDoc can be easily converted to other formats like HTML, PDF, and ePub. This makes it easy to distribute
+      documentation to users and customers in the format they prefer.
     </p>
     <p>Overall, AsciiDoc provides a flexible and extensible tool for creating high-quality documentation.</p>
+    <p>Now, let's discover how to install and utilize AsciiDoc.</p>
   </div>
 </aside>
