--- a/pages/04-getting-started-asciidoc.html
+++ b/pages/04-getting-started-asciidoc.html
@@ -2,7 +2,7 @@
   <div class="title">Getting Started with AsciiDoc</div>
   <div><hr /></div>
   <div class="content">
-    <div class="fragment">
+    <div>
       <p style="text-align: left">Install AsciiDoc</p>
       <pre><code>sudo apt-get install asciidoc</code></pre>
       <pre><code>brew install asciidoc</code></pre>
@@ -49,11 +49,7 @@
     <p>
       <b><em>click for next</em></b>
     </p>
-    <p>
-      Start your document with a heading by using = followed by a space and the heading text. Add a paragraph by simply
-      typing the text. Add a second-level heading by using == followed by a space and the heading text. And add another
-      paragraph.
-    </p>
+    <p>Create your content in AsciiDoc syntax and save it in the file.</p>
     <p>
       <b><em>click for next</em></b>
     </p>
@@ -64,6 +60,9 @@
     <p>
       <b><em>click for next</em></b>
     </p>
-    <p>Here are some additional resources for learning more about AsciiDoc.</p>
+    <p>
+      That concludes the basics of AsciiDoc. Here are some additional resources to further explore and learn about it.
+      Now, let's move on to Antora.
+    </p>
   </div>
 </aside>
