--- a/pages/05-what-is-antora.html
+++ b/pages/05-what-is-antora.html
@@ -3,7 +3,7 @@
   <div><hr /></div>
   <div class="content">
     <ul>
-      <li class="fragment">An open-source documentation platform that uses AsciiDoc</li>
+      <li>An open-source documentation platform that uses AsciiDoc</li>
       <li class="fragment">Designed to help organizations manage and publish documentation</li>
       <li class="fragment">
         <u><b>Modular documentation:</b></u> allows you to break down your documentation into modules
@@ -37,38 +37,35 @@
       <b><em>click for next</em></b>
     </p>
     <p>
-      Modular documentation: Antora allows you to break down your documentation into modules, which can be versioned and
-      managed separately. This makes it easier to maintain and update documentation over time.
+      Antora allows you to break down your documentation into modules, which can be versioned and managed separately.
+      This makes it easier to maintain and update documentation over time.
     </p>
     <p>
       <b><em>click for next</em></b>
     </p>
     <p>
-      Site generation: Antora can generate static websites from your documentation modules, making it easy to publish
-      documentation to the web. It supports a variety of site generators, including AsciiDoctor Site, Assemble, and
-      Hugo.
+      Antora can generate static websites from your documentation modules, making it easy to publish documentation to
+      the web.
     </p>
     <p>
       <b><em>click for next</em></b>
     </p>
     <p>
-      Navigation and search: Antora includes features for creating navigation menus and search functionality, making it
-      easy for users to find the information they need.
+      Antora includes features for creating navigation menus and search functionality, making it easy for users to find
+      the information they need.
     </p>
     <p>
       <b><em>click for next</em></b>
     </p>
-    <p>Customization: Antora is highly customizable, with support for custom themes, templates, and styles.</p>
+    <p>Antora is highly customizable, with support for custom themes, templates, and styles.</p>
     <p>
       <b><em>click for next</em></b>
     </p>
-    <p>Integration: Antora can be integrated with other tools and systems, including Git, JIRA, and Slack.</p>
-    <p>
-      <b><em>click for next</em></b>
-    </p>
+    <p>Antora can be integrated with other tools and systems, including Git, JIRA, and Slack.</p>
     <p>
       Overall, Antora provides a comprehensive solution for managing and publishing documentation. Its modular design
       makes it easy to maintain and update documentation over time.
     </p>
+    <p>Let's quickly explore how to install Antora and set up our environment.</p>
   </div>
 </aside>
