--- a/pages/07-getting-started-antora.html
+++ b/pages/07-getting-started-antora.html
@@ -42,16 +42,12 @@
       </p>
       <p>
         The playbook file is a YAML file that contains configuration options for Antora. You'll need to configure the
-        playbook to point to your documentation files.
+        playbook to point to your documentation files. We will explore the concept of a playbook file shortly.
       </p>
       <p>
         <b><em>click for next</em></b>
       </p>
       <p>Once your playbook is configured, you can generate the site using the antora command.</p>
-      <p>
-        <b><em>click for next</em></b>
-      </p>
-      <p>Here are some additional resources for learning more about AsciiDoc.</p>
     </div>
   </aside>
 </section>
@@ -76,6 +72,7 @@ output:
   </div>
   <aside class="notes">
     <div style="font-size: large !important">
+      <p>Here is a sample playbook file that contains fundamental properties.</p>
       <p>
         This playbook tells Antora to generate a site with the title "My Documentation", using documentation files
         located in the <b>docs</b> directory of the <b>my-org/my-docs</b> repository on GitHub. The generated site will
@@ -85,6 +82,10 @@ output:
         Once you've generated the site, you can view it in a web browser to see how it looks. If you need to make
         changes to your documentation, you can edit the AsciiDoc files and re-run the <b>antora</b> command to
         regenerate the site.
+      </p>
+      <p>
+        To enhance your comprehension and experience with Antora, it's important to familiarize yourself with its
+        specific components. Let's now explore what these components are.
       </p>
     </div>
   </aside>
