--- a/pages/09-integrate-antora.html
+++ b/pages/09-integrate-antora.html
@@ -23,5 +23,6 @@
       By integrating Antora with these popular tools, you can automate your documentation workflows and ensure that your
       documentation is always up to date and easily accessible to your users.
     </p>
+    <p>As the final part of the presentation, we will delve into advanced features of Antora.</p>
   </div>
 </aside>
