--- a/pages/10-advanced-antora.html
+++ b/pages/10-advanced-antora.html
@@ -41,9 +41,13 @@
       <b><em>click for next</em></b>
     </p>
     <p>
-      Antora supports search functionality that allows users to easily find the content they need within the
-      documentation. The search functionality is based on Lunr.js, a JavaScript search engine that provides fast and
-      accurate search results.
+      It supports search functionality that allows users to easily find the content they need within the documentation.
+      <s>
+        <em>
+          The search functionality is based on Lunr.js, a JavaScript search engine that provides fast and accurate
+          search results.
+        </em>
+      </s>
     </p>
     <p>
       To enable search in Antora, you need to include the @antora/search component in your Antora playbook file. Once
@@ -57,20 +61,19 @@
       and provide a language switcher to enable users to switch between languages.
     </p>
     <p>
-      To enable multilingual support in Antora, you need to include the @antora/i18n component in your Antora playbook
-      file.
+      To enable it, you need to include the internalization <s><em>@antora/i18n</em></s> component in your Antora
+      playbook file.
     </p>
     <p>
       <b><em>click for next</em></b>
     </p>
     <p>
-      Antora provides support for user authentication, allowing you to restrict access to your documentation to specific
-      users or groups.
+      Antora also provides support for user authentication, allowing you to restrict access to your documentation to
+      specific users or groups.
     </p>
     <p>
-      To enable user authentication in Antora, you need to include the @antora/auth component in your Antora playbook
-      file. This component allows you to define authentication providers, such as LDAP or GitHub. Once authentication is
-      set up, Antora will require users to log in before they can access your documentation.
+      To enable it in Antora, you need to include the @antora/auth component in your Antora playbook file. This
+      component allows you to define authentication providers, such as LDAP or GitHub.
     </p>
   </div>
 </aside>
