--- a/pages/11-the-end.html
+++ b/pages/11-the-end.html
@@ -4,9 +4,16 @@
   <div>
     <div class="content">
       <ul>
-        <li>Q&A</li>
-        <li>Next: Demo</li>
+        <li>Demo</li>
       </ul>
     </div>
   </div>
 </div>
+<aside class="notes">
+  <div style="font-size: large !important">
+    <p>
+      Alright, that wraps up the quick rundown on Antora and AsciiDoc. Now, it's time to see Antora in action! Let's
+      dive into the exciting demo session and experience firsthand how it works.
+    </p>
+  </div>
+</aside>
